Dockerfile for cuda11.4

--- a/TotalSegmentator/cuda11.4/Dockerfile
+++ b/TotalSegmentator/cuda11.4/Dockerfile
@@ -1,4 +1,4 @@
-FROM mhubai/totalsegmentator:nocuda
+FROM mhubai/totalsegmentator:cuda11.4
 
 # Install some basic system utilities
 RUN apt update \
