--- a/Dockerfiles/TotalSegmentator/splitWorkflow/task2/Dockerfile
+++ b/Dockerfiles/TotalSegmentator/splitWorkflow/task2/Dockerfile
@@ -6,10 +6,11 @@ ENV DEBIAN_FRONTEND noninteractive
 # Install some basic system utilities
 RUN apt-get update && apt-get install -y --no-install-recommends \
     build-essential=12.9ubuntu3\
+    lz4=1.9.3-2build2\
     python3-dev=3.10.6-1~22.04\
     python3-pip=22.0.2+dfsg-1ubuntu0.2\
     xvfb=2:21.1.3-2ubuntu2.8 \
-    unzip\
+    unzip=6.0-26ubuntu3.1\
   && rm -rf /var/lib/apt/lists/*
 
 RUN pip install --no-cache-dir \
