--- a/.dockstore.yml
+++ b/.dockstore.yml
@@ -13,5 +13,10 @@ workflows:
      primaryDescriptorPath: /Terra/TotalSegmentator/splitWorkflow/splitWorkflowV2.wdl
      testParameterFiles:
      -  /sampleManifests/batch_1.csv
-     
+   - name: TotalSegmentatorTask1and2
+     subclass: CWL
+     primaryDescriptorPath: /SevenBridges/TotalSegmentator/splitWorkflow/tasks1and2.cwl
+     testParameterFiles:
+     -  /sampleManifests/batch_1.csv
+          
     
