Edited autochton reference from erector spinae to Deep muscle of the back
Link to discussion: https://github.com/wasserth/TotalSegmentator/issues/135

--- a/configs/TotalSegmentator/dicomseg_metadata_whole_slicerAsRef.yaml
+++ b/configs/TotalSegmentator/dicomseg_metadata_whole_slicerAsRef.yaml
@@ -73,8 +73,8 @@ segmentAttributes:
       CodeValue: '123037004'
       CodingSchemeDesignator: SCT
     SegmentedPropertyTypeCodeSequence:
-      CodeMeaning: Erector spinae muscle
-      CodeValue: '44947003'
+      CodeMeaning: Deep muscle of back
+      CodeValue: '244849004'
       CodingSchemeDesignator: SCT
     SegmentedPropertyTypeModifierCodeSequence:
       CodeMeaning: Left
@@ -93,8 +93,8 @@ segmentAttributes:
       CodeValue: '123037004'
       CodingSchemeDesignator: SCT
     SegmentedPropertyTypeCodeSequence:
-      CodeMeaning: Erector spinae muscle
-      CodeValue: '44947003'
+      CodeMeaning: Deep muscle of back
+      CodeValue: '244849004'
       CodingSchemeDesignator: SCT
     SegmentedPropertyTypeModifierCodeSequence:
       CodeMeaning: Right
