starting with sha:256 digest base images

--- a/Dockerfiles/TotalSegmentator/splitWorkflow/task1/Dockerfile
+++ b/Dockerfiles/TotalSegmentator/splitWorkflow/task1/Dockerfile
@@ -2,7 +2,7 @@ FROM python@5b287042a6150052420e6a7fb7c1606b6403740880897ae9610faf434da28693
 
 ARG GIT_HASH
 
-LABEL python base docker image: python:3.11.2-slim-buster\
+LABEL PYTHON_BASE_DOCKER_IMAGE="python:3.11.2-slim-buster"\
       MAINTAINER="IDC <vthiriveedhi@mgb.org>" \
       GIT_HASH=${GIT_HASH}\
       PATH_TO_DOCKER_FILE="https://github.com/vkt1414/Cloud-Resources-Workflows/blob/${GIT_HASH}/Dockerfiles/TotalSegmentator/splitWorkflow/task1/Dockerfile"
