--- a/Dockerfiles/TotalSegmentator/splitWorkflow/task3/Dockerfile
+++ b/Dockerfiles/TotalSegmentator/splitWorkflow/task3/Dockerfile
@@ -1,14 +1,12 @@
-FROM python:3.11.2-slim-buster
+FROM python@sha256:5b287042a6150052420e6a7fb7c1606b6403740880897ae9610faf434da28693
 
 ARG GIT_HASH
 
-# ENV TERM=xterm-256color \
-#     BAMID_URL=https://github.com/Griffan/VerifyBamID/archive \
-#     TINI_VERSION=v0.19.0
-
-LABEL MAINTAINER="IDC <vthiriveedhi@mgb.org>" \
+LABEL PYTHON_BASE_DOCKER_IMAGE="python:3.11.2-slim-buster"\
+      MAINTAINER="IDC <vthiriveedhi@mgb.org>" \
       GIT_HASH=${GIT_HASH}\
-      IMAGE_NAME_ON_DOCKERHUB="imagingdatacommons/totalsegmentator:task3_v5"
+      PATH_TO_DOCKER_FILE="https://github.com/vkt1414/Cloud-Resources-Workflows/blob/${GIT_HASH}/Dockerfiles/TotalSegmentator/splitWorkflow/task3/Dockerfile"\
+      IMAGE_NAME_ON_DOCKERHUB="imagingdatacommons/radiomics"
 
 # Install some basic system utilities
 RUN apt-get update \
