--- a/.github/workflows/radiomics.yml
+++ b/.github/workflows/radiomics.yml
@@ -5,14 +5,14 @@ on:
     branches:
       - main  
     paths:
-      - 'Dockerfiles/TotalSegmentator/splitWorkflow/task3/**'
+      - 'Dockerfiles/radiomics/**'
 
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
       - name: Set up Git
         run: git config --global user.email "actions@github.com" && git config --global user.name "GitHub Actions"
@@ -22,17 +22,17 @@ jobs:
         run: echo "::set-output name=commit_hash::$(git rev-parse HEAD)"
 
       - name: Login to Docker Hub
-        uses: docker/login-action@v2
+        uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Build and push Docker image
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@v5
         with:
           context: .
-          file: ./Dockerfiles/TotalSegmentator/splitWorkflow/task3/Dockerfile
+          file: ./Dockerfiles/radiomics/Dockerfile
           push: true
-          tags: imagingdatacommons/totalsegmentator:radiomics
+          tags: imagingdatacommons/radiomics
           build-args: |
             GIT_HASH=${{ steps.git-commit-hash.outputs.commit_hash }}
