added the argument (ARG) to dockerfiles

--- a/Dockerfiles/download_convert_inference_totalseg_radiomics/Dockerfile
+++ b/Dockerfiles/download_convert_inference_totalseg_radiomics/Dockerfile
@@ -1,5 +1,7 @@
 FROM nvidia/cuda@sha256:e1a2b842633d9b48588553c699fe5369199fba724729ea165fd0e1c7a5baf3cb
 
+ARG GIT_HASH
+
 LABEL BASE_DOCKER_IMAGE="nvidia/cuda:12.1.0-base-ubuntu20.04"\
       MAINTAINER="IDC <vthiriveedhi@mgb.org>" \
       GIT_HASH=${GIT_HASH}\
