--- a/Dockerfiles/inference_totalseg/Dockerfile
+++ b/Dockerfiles/inference_totalseg/Dockerfile
@@ -1,5 +1,7 @@
 FROM nvidia/cuda@sha256:bed19cc4270a4624f732de7a69beb061a7dfb2ab2e05e1a58e157a483ed25185
 
+ARG GIT_HASH
+
 LABEL BASE_DOCKER_IMAGE="nvidia/cuda:12.1.0-base-ubuntu22.04"\
       MAINTAINER="IDC <vthiriveedhi@mgb.org>" \
       GIT_HASH=${GIT_HASH}\
