--- a/.github/workflows/download_convert_inference.yml
+++ b/.github/workflows/download_convert_inference.yml
@@ -15,8 +15,10 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Set up Git
-        run: git config --global user.email "actions@github.com" && git config --global user.name "GitHub Actions"
-
+        run: |
+          git config --global user.email "actions@github.com"
+          git config --global user.name "GitHub Actions"
+      
       - name: Get Git Commit Hash
         id: git-commit-hash
         run: echo "::set-output name=commit_hash::$(git rev-parse HEAD)"
@@ -39,4 +41,4 @@ jobs:
           push: true
           tags: imagingdatacommons/download_convert_inference_totalseg
           build-args: |
-            GIT_HASH=${{ steps.git-commit-hash.outputs.commit_hash }}
+            GIT_HASH=$COMMIT_HASH
