--- a/.github/workflows/download_convert_inference_totalseg_radiomics.yml
+++ b/.github/workflows/download_convert_inference_totalseg_radiomics.yml
@@ -15,12 +15,16 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Set up Git
-        run: git config --global user.email "actions@github.com" && git config --global user.name "GitHub Actions"
+        run: |
+          git config --global user.email "actions@github.com"
+          git config --global user.name "GitHub Actions"
 
       - name: Get Git Commit Hash
         id: git-commit-hash
-        run: echo "::set-output name=commit_hash::$(git rev-parse HEAD)"
-      
+        run: |
+          COMMIT_HASH=$(git rev-parse HEAD)
+          echo "COMMIT_HASH=$COMMIT_HASH" >> $GITHUB_ENV
+          
       - name: Copy additional files to build context
         run: |
           cp Dockerfiles/download_convert_inference_totalseg_radiomics/weights_download.sh .
@@ -39,4 +43,4 @@ jobs:
           push: true
           tags: imagingdatacommons/download_convert_inference_totalseg_radiomics
           build-args: |
-            GIT_HASH=${{ steps.git-commit-hash.outputs.commit_hash }}
+            GIT_HASH=$COMMIT_HASH
