--- a/.github/workflows/inference_totalseg.yml
+++ b/.github/workflows/inference_totalseg.yml
@@ -14,12 +14,16 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Set up Git
-        run: git config --global user.email "actions@github.com" && git config --global user.name "GitHub Actions"
+        run: |
+          git config --global user.email "actions@github.com"
+          git config --global user.name "GitHub Actions"
 
       - name: Get Git Commit Hash
         id: git-commit-hash
-        run: echo "::set-output name=commit_hash::$(git rev-parse HEAD)"
-      
+        run: |
+          COMMIT_HASH=$(git rev-parse HEAD)
+          echo "COMMIT_HASH=$COMMIT_HASH" >> $GITHUB_ENV
+
       - name: Copy additional files to build context
         run: |
           cp Dockerfiles/inference_totalseg/weights_download.sh .
@@ -38,4 +42,4 @@ jobs:
           push: true
           tags: imagingdatacommons/inference_totalseg
           build-args: |
-            GIT_HASH=${{ steps.git-commit-hash.outputs.commit_hash }}
+            GIT_HASH=$COMMIT_HASH
