--- a/.github/workflows/download_convert_inference_totalseg_radiomics.yml
+++ b/.github/workflows/download_convert_inference_totalseg_radiomics.yml
@@ -3,9 +3,10 @@ name: download_convert_inference_totalseg_radiomics
 on:
   push:
     branches:
-      - main  
+      - dev  
     paths:
       - 'Dockerfiles/download_convert_inference_totalseg_radiomics/**'
+      - .github/workflows/download_convert_inference_totalseg_radiomics.yml
 
 jobs:
   build-and-push:
@@ -41,6 +42,6 @@ jobs:
           context: .
           file: ./Dockerfiles/download_convert_inference_totalseg_radiomics/Dockerfile
           push: true
-          tags: imagingdatacommons/download_convert_inference_totalseg_radiomics
+          tags: imagingdatacommons/download_convert_inference_totalseg_radiomics:dev
           build-args: |
             GIT_HASH=$COMMIT_HASH
