--- a/.github/workflows/inference_totalseg.yml
+++ b/.github/workflows/inference_totalseg.yml
@@ -3,9 +3,11 @@ name: inference_totalseg
 on:
   push:
     branches:
-      - main  
+      - dev  
     paths:
       - 'Dockerfiles/inference_totalseg/**'
+      - .github/workflows/inference_totalseg.yml     
+      
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
@@ -40,6 +42,6 @@ jobs:
           context: .
           file: ./Dockerfiles/inference_totalseg/Dockerfile
           push: true
-          tags: imagingdatacommons/inference_totalseg
+          tags: imagingdatacommons/inference_totalseg:dev
           build-args: |
             GIT_HASH=$COMMIT_HASH
