corrected GIT_HASH variable

--- a/.github/workflows/download_convert.yml
+++ b/.github/workflows/download_convert.yml
@@ -41,4 +41,4 @@ jobs:
           push: true
           tags: imagingdatacommons/download_convert:dev
           build-args: |
-            GIT_HASH=$COMMIT_HASH
+            GIT_HASH=${COMMIT_HASH}
