--- a/.github/workflows/radiomics.yml
+++ b/.github/workflows/radiomics.yml
@@ -40,4 +40,4 @@ jobs:
           push: true
           tags: imagingdatacommons/radiomics:dev
           build-args: |
-            GIT_HASH=$COMMIT_HASH
+            GIT_HASH=${COMMIT_HASH}
