corrected GIT_HASH variable

--- a/.github/workflows/download_convert.yml
+++ b/.github/workflows/download_convert.yml
@@ -42,3 +42,5 @@ jobs:
           tags: imagingdatacommons/download_convert:dev
           build-args: |
             GIT_HASH=${COMMIT_HASH}
+        env:
+          COMMIT_HASH: ${{ env.COMMIT_HASH }}
