corrected GIT_HASH variable

--- a/.github/workflows/download_convert.yml
+++ b/.github/workflows/download_convert.yml
@@ -1,4 +1,4 @@
-name: download_convert 
+name: download_convert
 
 on:
   push:
@@ -41,6 +41,6 @@ jobs:
           push: true
           tags: imagingdatacommons/download_convert:dev
           build-args: |
-            GIT_HASH=${COMMIT_HASH}
+            GIT_HASH=${{ env.COMMIT_HASH }}
         env:
           COMMIT_HASH: ${{ env.COMMIT_HASH }}
