fixed referencing GIT HASH variable

--- a/.github/workflows/download_convert_inference_totalseg_radiomics.yml
+++ b/.github/workflows/download_convert_inference_totalseg_radiomics.yml
@@ -44,4 +44,6 @@ jobs:
           push: true
           tags: imagingdatacommons/download_convert_inference_totalseg_radiomics:dev
           build-args: |
-              GIT_HASH=${COMMIT_HASH}
+            GIT_HASH=${{ env.COMMIT_HASH }}
+        env:
+          COMMIT_HASH: ${{ env.COMMIT_HASH }}
