--- a/.github/workflows/inference_totalseg.yml
+++ b/.github/workflows/inference_totalseg.yml
@@ -44,4 +44,6 @@ jobs:
           push: true
           tags: imagingdatacommons/inference_totalseg:dev
           build-args: |
-            GIT_HASH=${COMMIT_HASH}
+            GIT_HASH=${{ env.COMMIT_HASH }}
+        env:
+          COMMIT_HASH: ${{ env.COMMIT_HASH }}
