--- a/.github/workflows/radiomics.yml
+++ b/.github/workflows/radiomics.yml
@@ -40,4 +40,6 @@ jobs:
           push: true
           tags: imagingdatacommons/radiomics:dev
           build-args: |
-            GIT_HASH=${COMMIT_HASH}
+            GIT_HASH=${{ env.COMMIT_HASH }}
+        env:
+          COMMIT_HASH: ${{ env.COMMIT_HASH }}
