--- a/.github/workflows/download_convert_inference_totalseg-dev.yml
+++ b/.github/workflows/download_convert_inference_totalseg-dev.yml
@@ -3,7 +3,7 @@ name: download_convert_inference_totalseg
 on:
   push:
     branches:
-      - main
+      - dev
     paths:
       - 'Dockerfiles/download_convert_inference_totalseg/**'
       - .github/workflows/download_convert_inference_totalseg.yml
@@ -42,7 +42,7 @@ jobs:
           context: .
           file: ./Dockerfiles/download_convert_inference_totalseg/Dockerfile
           push: true
-          tags: imagingdatacommons/download_convert_inference_totalseg
+          tags: imagingdatacommons/download_convert_inference_totalseg:dev
           build-args: |
             GIT_HASH=${{ env.COMMIT_HASH }}
         env:
