--- a/.github/workflows/download_convert_inference_totalseg_radiomics-dev.yml
+++ b/.github/workflows/download_convert_inference_totalseg_radiomics-dev.yml
@@ -1,13 +1,13 @@
-name: download_convert_inference_totalseg
+name: download_convert_inference_totalseg_radiomics
 
 on:
   push:
     branches:
-      - main
+      - dev  
     paths:
-      - 'Dockerfiles/download_convert_inference_totalseg/**'
-      - .github/workflows/download_convert_inference_totalseg.yml
-      
+      - 'Dockerfiles/download_convert_inference_totalseg_radiomics/**'
+      - .github/workflows/download_convert_inference_totalseg_radiomics.yml
+
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
@@ -19,16 +19,16 @@ jobs:
         run: |
           git config --global user.email "actions@github.com"
           git config --global user.name "GitHub Actions"
-      
+
       - name: Get Git Commit Hash
         id: git-commit-hash
         run: |
           COMMIT_HASH=$(git rev-parse HEAD)
           echo "COMMIT_HASH=$COMMIT_HASH" >> $GITHUB_ENV
-      
+          
       - name: Copy additional files to build context
         run: |
-          cp Dockerfiles/download_convert_inference_totalseg/weights_download.sh .
+          cp Dockerfiles/download_convert_inference_totalseg_radiomics/weights_download.sh .
 
       - name: Login to Docker Hub
         uses: docker/login-action@v3
@@ -40,9 +40,9 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: .
-          file: ./Dockerfiles/download_convert_inference_totalseg/Dockerfile
+          file: ./Dockerfiles/download_convert_inference_totalseg_radiomics/Dockerfile
           push: true
-          tags: imagingdatacommons/download_convert_inference_totalseg
+          tags: imagingdatacommons/download_convert_inference_totalseg_radiomics:dev
           build-args: |
             GIT_HASH=${{ env.COMMIT_HASH }}
         env:
