--- a/.github/workflows/download_convert_inference_totalseg_radiomics.yml
+++ b/.github/workflows/download_convert_inference_totalseg_radiomics.yml
@@ -3,7 +3,7 @@ name: download_convert_inference_totalseg_radiomics
 on:
   push:
     branches:
-      - dev  
+      - main  
     paths:
       - 'Dockerfiles/download_convert_inference_totalseg_radiomics/**'
       - .github/workflows/download_convert_inference_totalseg_radiomics.yml
@@ -42,7 +42,7 @@ jobs:
           context: .
           file: ./Dockerfiles/download_convert_inference_totalseg_radiomics/Dockerfile
           push: true
-          tags: imagingdatacommons/download_convert_inference_totalseg_radiomics:dev
+          tags: imagingdatacommons/download_convert_inference_totalseg_radiomics
           build-args: |
             GIT_HASH=${{ env.COMMIT_HASH }}
         env:
