--- a/.github/workflows/inference_totalseg-dev.yml
+++ b/.github/workflows/inference_totalseg-dev.yml
@@ -1,12 +1,12 @@
-name: download_convert_inference_totalseg
+name: inference_totalseg
 
 on:
   push:
     branches:
-      - main
+      - dev  
     paths:
-      - 'Dockerfiles/download_convert_inference_totalseg/**'
-      - .github/workflows/download_convert_inference_totalseg.yml
+      - 'Dockerfiles/inference_totalseg/**'
+      - .github/workflows/inference_totalseg.yml     
       
 jobs:
   build-and-push:
@@ -19,16 +19,16 @@ jobs:
         run: |
           git config --global user.email "actions@github.com"
           git config --global user.name "GitHub Actions"
-      
+
       - name: Get Git Commit Hash
         id: git-commit-hash
         run: |
           COMMIT_HASH=$(git rev-parse HEAD)
           echo "COMMIT_HASH=$COMMIT_HASH" >> $GITHUB_ENV
-      
+
       - name: Copy additional files to build context
         run: |
-          cp Dockerfiles/download_convert_inference_totalseg/weights_download.sh .
+          cp Dockerfiles/inference_totalseg/weights_download.sh .
 
       - name: Login to Docker Hub
         uses: docker/login-action@v3
@@ -40,9 +40,9 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: .
-          file: ./Dockerfiles/download_convert_inference_totalseg/Dockerfile
+          file: ./Dockerfiles/inference_totalseg/Dockerfile
           push: true
-          tags: imagingdatacommons/download_convert_inference_totalseg
+          tags: imagingdatacommons/inference_totalseg:dev
           build-args: |
             GIT_HASH=${{ env.COMMIT_HASH }}
         env:
