--- a/.github/workflows/download_convert_inference_totalseg_radiomics.yml
+++ b/.github/workflows/download_convert_inference_totalseg_radiomics.yml
@@ -3,13 +3,15 @@ name: download_convert_inference_totalseg_radiomics
 on:
   push:
     branches:
-      - main  
+      - dev
+      - main
     paths:
       - 'Dockerfiles/download_convert_inference_totalseg_radiomics/**'
       - .github/workflows/download_convert_inference_totalseg_radiomics.yml
 
 jobs:
-  build-and-push:
+  build-and-push-dev:
+    if: github.ref == 'refs/heads/dev'
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -25,7 +27,7 @@ jobs:
         run: |
           COMMIT_HASH=$(git rev-parse HEAD)
           echo "COMMIT_HASH=$COMMIT_HASH" >> $GITHUB_ENV
-          
+
       - name: Copy additional files to build context
         run: |
           cp Dockerfiles/download_convert_inference_totalseg_radiomics/weights_download.sh .
@@ -36,7 +38,47 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Build and push Docker image
+      - name: Build and push Docker image (dev)
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          file: ./Dockerfiles/download_convert_inference_totalseg_radiomics/Dockerfile
+          push: true
+          tags: imagingdatacommons/download_convert_inference_totalseg_radiomics:dev
+          build-args: |
+            GIT_HASH=${{ env.COMMIT_HASH }}
+        env:
+          COMMIT_HASH: ${{ env.COMMIT_HASH }}
+
+  build-and-push-prod:
+    if: github.ref == 'refs/heads/main'
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Git
+        run: |
+          git config --global user.email "actions@github.com"
+          git config --global user.name "GitHub Actions"
+
+      - name: Get Git Commit Hash
+        id: git-commit-hash
+        run: |
+          COMMIT_HASH=$(git rev-parse HEAD)
+          echo "COMMIT_HASH=$COMMIT_HASH" >> $GITHUB_ENV
+
+      - name: Copy additional files to build context
+        run: |
+          cp Dockerfiles/download_convert_inference_totalseg_radiomics/weights_download.sh .
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Build and push Docker image (main)
         uses: docker/build-push-action@v5
         with:
           context: .
